fixed spacing for header

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
 .my-nav-link {
     color: #cbd5e1;
     text-decoration: none;
-    padding: 0.5rem 3.75rem;
+    padding: 0.5rem 0.75rem;
     border-radius: 0.375rem;
     transition: all 0.2s ease;
     font-weight: 500;
